--- a/acessibilidade.css
+++ b/acessibilidade.css
@@ -13,7 +13,7 @@
     padding-left: 8px;
     border-radius: 8px;
     margin-left: 70px;
-    background-color: #e6e3e3;
+    background-color: #ffffff;
 }
 
 span{
