--- a/style.css
+++ b/style.css
@@ -93,3 +93,13 @@ header {
   text-decoration: none;
   font-weight: bold;
 }
+
+
+footer {
+  text-align: center;
+  padding: 10px;
+  background: #004aad;
+  color: white;
+  width: 100%;
+  bottom: 0;
+}
