--- a/acessibilidade.css
+++ b/acessibilidade.css
@@ -1,8 +1,10 @@
 @import url(style.css);
 
-.acessibilidade-menu {
+.acessibilidade-menu {    
     position: fixed;
-    font-size: #171717;
+    top: 0;
+    left: 0;
+    z-index: 1000;
     display: flex;
     align-items: center;
     width: fit-content;
